--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,11 @@
 [[redirects]]
+from = "/xp-ge-craft"
+to = "/xp-ge-craft/"
+status = 301
+
+[[redirects]]
 from = "/xp-ge-craft/*"
-to = "https://xp-ge-craft.netlify.app/:splat"
+to = "https://xp-ge-craft.netlify.app/xp-ge-craft/:splat"
 status = 200
 
 [[redirects]]
