--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "vitest run"
+    "test": "vitest run",
+    "benchmark:mission-craft:archive-profile": "tsx scripts/archive-mission-craft-benchmark-profile.ts",
+    "benchmark:mission-craft": "tsx scripts/mission-craft-benchmark.ts",
+    "benchmark:mission-craft:convert-report": "tsx scripts/mission-craft-benchmark-convert-report.ts"
   },
   "dependencies": {
     "axios": "^1.13.5",
@@ -20,6 +23,7 @@
   "devDependencies": {
     "@types/node": "22.0.0",
     "@types/react": "18.3.3",
+    "tsx": "^4.21.0",
     "typescript": "5.5.4",
     "vitest": "^1.6.1"
   }
