--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "protobufjs": "^8.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "sharp": "^0.34.5",
     "zod": "^4.3.6"
   },
   "devDependencies": {
